<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo2"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:text="@string/nombre"
        android:textSize="@dimen/tamaño_letra_for" />

    <TextView
        android:id="@+id/tvApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:text="@string/apellido"
        android:textSize="@dimen/tamaño_letra_for" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:text="@string/edad"
        android:textSize="@dimen/tamaño_letra_for" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:text="@string/correo"
        android:textSize="@dimen/tamaño_letra_for" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:text="@string/btnOk" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_top"
        android:text="@string/btnSalir" />



</LinearLayout>